syntax = "proto3";

package aurigraph.v12.streaming;

import "google/protobuf/timestamp.proto";
import "common.proto";
import "transaction.proto";
import "validator-stream.proto";
import "consensus-stream.proto";
import "network-stream.proto";
import "metrics-stream.proto";

option java_multiple_files = true;
option java_package = "io.aurigraph.v12.streaming";
option java_outer_classname = "StreamingProto";

/**
 * Aurigraph V12 Unified Streaming Services
 *
 * This proto file consolidates all real-time streaming services for Aurigraph V12 DLT platform.
 * Provides gRPC-Web streaming for transactions, validators, consensus, network topology, and metrics.
 *
 * Architecture Benefits:
 * - 60-70% bandwidth reduction (Protobuf vs JSON)
 * - Type-safe client generation (TypeScript + Java)
 * - Built-in flow control and backpressure
 * - HTTP/2 multiplexing (multiple streams, one connection)
 * - Native browser support via gRPC-Web
 *
 * Performance Targets:
 * - 2M+ TPS transaction streaming
 * - <100ms event delivery latency
 * - Support for 10,000+ concurrent stream subscribers
 * - Automatic reconnection and state recovery
 *
 * Stream Types:
 * 1. TransactionStream - Real-time transaction events
 * 2. ValidatorStream - Validator status and performance
 * 3. ConsensusStream - HyperRAFT++ consensus events
 * 4. NetworkStream - Network topology and peer connections
 * 5. MetricsStream - Performance metrics and analytics
 *
 * Protocol Version: v12.0.0
 * gRPC Version: 1.60.0+
 * Created: December 2025
 */

// ============================================================================
// UNIFIED STREAMING SERVICE
// ============================================================================

/**
 * UnifiedStreamingService
 *
 * Central streaming service that provides access to all event streams.
 * Clients can subscribe to multiple stream types through a single connection.
 */
service UnifiedStreamingService {
  // ========== Transaction Streaming ==========

  /**
   * StreamTransactions - Real-time transaction events
   *
   * Streams transaction lifecycle events including:
   * - Transaction submission
   * - Validation status changes
   * - Confirmation updates
   * - Finalization events
   *
   * Performance: Supports 2M+ TPS with <100ms latency
   */
  rpc StreamTransactions(TransactionStreamRequest) returns (stream TransactionEvent);

  /**
   * StreamTransactionStatus - Track specific transaction states
   *
   * Subscribe to status updates for specific transactions by hash or ID.
   * Useful for wallet applications and transaction tracking.
   */
  rpc StreamTransactionStatus(TransactionStatusStreamRequest) returns (stream TransactionStatusUpdate);

  // ========== Validator Streaming ==========

  /**
   * StreamValidators - Real-time validator events
   *
   * Streams validator status including:
   * - Validator registration/activation/deactivation
   * - Performance metrics and reputation changes
   * - Stake changes and rewards
   * - Health status updates
   *
   * Update frequency: 1-5 seconds per validator
   */
  rpc StreamValidators(ValidatorStreamRequest) returns (stream ValidatorEvent);

  /**
   * StreamValidatorPerformance - Detailed performance metrics
   *
   * High-frequency stream of validator performance data including:
   * - Block proposal success rates
   * - Voting participation
   * - Transaction processing throughput
   * - Response time metrics
   */
  rpc StreamValidatorPerformance(ValidatorStreamRequest) returns (stream ValidatorPerformanceEvent);

  // ========== Consensus Streaming ==========

  /**
   * StreamConsensus - HyperRAFT++ consensus events
   *
   * Streams consensus protocol events including:
   * - Leader elections
   * - Block proposals and voting
   * - Commitment and finalization
   * - Validator set changes
   *
   * Critical for monitoring consensus health and performance
   */
  rpc StreamConsensus(ConsensusStreamRequest) returns (stream ConsensusEvent);

  /**
   * StreamConsensusRounds - Round-by-round consensus tracking
   *
   * Detailed view of each consensus round including:
   * - Proposal phase
   * - Voting phase
   * - Commitment phase
   * - Round timing and performance
   */
  rpc StreamConsensusRounds(ConsensusStreamRequest) returns (stream ConsensusRoundEvent);

  // ========== Network Streaming ==========

  /**
   * StreamNetwork - Network topology and peer events
   *
   * Streams network-level events including:
   * - Node join/leave events
   * - Peer connection changes
   * - Network partitioning detection
   * - Topology updates
   *
   * Essential for network health monitoring
   */
  rpc StreamNetwork(NetworkStreamRequest) returns (stream NetworkEvent);

  /**
   * StreamNetworkTopology - Real-time topology graph
   *
   * Provides a live view of the network topology including:
   * - All active nodes
   * - Peer connections
   * - Geographic distribution
   * - Connection quality metrics
   */
  rpc StreamNetworkTopology(NetworkStreamRequest) returns (stream NetworkTopologyEvent);

  // ========== Metrics Streaming ==========

  /**
   * StreamMetrics - Performance and analytics metrics
   *
   * Streams system-wide metrics including:
   * - TPS (Transactions Per Second)
   * - Latency distributions
   * - Resource utilization
   * - Consensus performance
   *
   * Update frequency: 1-5 seconds
   */
  rpc StreamMetrics(MetricStreamRequest) returns (stream MetricEvent);

  /**
   * StreamAggregatedMetrics - Cluster-wide aggregated metrics
   *
   * Provides aggregated metrics across the entire network:
   * - Total network TPS
   * - Average latency
   * - Overall health scores
   * - Resource utilization averages
   */
  rpc StreamAggregatedMetrics(MetricStreamRequest) returns (stream AggregatedMetricEvent);

  // ========== Multi-Stream Subscriptions ==========

  /**
   * StreamMultiple - Subscribe to multiple event types
   *
   * Efficient way to subscribe to multiple stream types through a single connection.
   * Reduces overhead and improves performance for dashboard applications.
   */
  rpc StreamMultiple(MultiStreamRequest) returns (stream UnifiedEvent);

  /**
   * InteractiveStream - Bidirectional streaming with control commands
   *
   * Allows clients to dynamically adjust subscriptions and filters.
   * Supports pause/resume, filter changes, and rate limiting.
   */
  rpc InteractiveStream(stream StreamCommand) returns (stream UnifiedEvent);
}

// ============================================================================
// TRANSACTION STREAM MESSAGES
// ============================================================================

message TransactionStreamRequest {
  string client_id = 1;
  string session_token = 2;

  // Filtering
  repeated string filter_addresses = 3;  // Filter by sender/receiver address
  repeated io.aurigraph.v11.proto.TransactionStatus filter_statuses = 4;
  bool include_failed = 5;

  // Performance options
  int32 buffer_size = 6;  // Client-side buffer (default: 100)
  int32 update_interval_ms = 7;  // Minimum interval (default: 100ms)
}

message TransactionEvent {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Transaction details
  string transaction_hash = 3;
  string from_address = 4;
  string to_address = 5;
  string amount = 6;
  io.aurigraph.v11.proto.TransactionStatus status = 7;

  // Event metadata
  string event_type = 8;  // "submitted", "validated", "confirmed", "finalized", "failed"
  int64 block_height = 9;
  string block_hash = 10;
  int32 confirmations = 11;

  // Performance data
  int64 processing_time_ms = 12;
  double gas_used = 13;
}

message TransactionStatusStreamRequest {
  string client_id = 1;
  string session_token = 2;

  // Track specific transactions
  repeated string transaction_hashes = 3;

  // Options
  bool include_block_info = 4;
  bool include_confirmations = 5;
}

message TransactionStatusUpdate {
  string transaction_hash = 1;
  io.aurigraph.v11.proto.TransactionStatus status = 2;
  google.protobuf.Timestamp timestamp = 3;

  // Additional context
  int32 confirmations = 4;
  string block_hash = 5;
  int64 block_height = 6;
  string message = 7;
}

// ============================================================================
// VALIDATOR STREAM MESSAGES
// ============================================================================

message ValidatorStreamRequest {
  string client_id = 1;
  string session_token = 2;

  // Filtering
  repeated string validator_ids = 3;  // Specific validators (empty = all)
  bool only_active = 4;
  double min_reputation = 5;
  double min_stake = 6;

  // Options
  int32 update_interval_ms = 7;  // Default: 2000ms
  bool include_performance = 8;
  bool include_health = 9;
}

message ValidatorEvent {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Validator identification
  string validator_id = 3;
  string validator_address = 4;

  // Event details
  string event_type = 5;  // "registered", "activated", "deactivated", "slashed", "reward", "penalty"

  // Validator state
  ValidatorStatus status = 6;
  double stake = 7;
  double reputation = 8;

  // Performance snapshot
  int64 blocks_proposed = 9;
  int64 votes_cast = 10;
  double uptime_percent = 11;

  // Additional data
  map<string, string> metadata = 12;
}

message ValidatorStatus {
  enum Status {
    UNKNOWN = 0;
    REGISTERED = 1;
    ACTIVE = 2;
    INACTIVE = 3;
    SLASHED = 4;
    REMOVED = 5;
  }

  Status status = 1;
  google.protobuf.Timestamp last_updated = 2;
}

message ValidatorPerformanceEvent {
  string validator_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Block production
  double blocks_per_hour = 3;
  double block_acceptance_rate = 4;
  double avg_block_time_ms = 5;

  // Voting performance
  double voting_participation_rate = 6;
  double avg_vote_time_ms = 7;

  // Transaction processing
  int64 transactions_processed = 8;
  double avg_tx_time_ms = 9;

  // Overall scores
  double performance_score = 10;  // 0-100
  double reliability_score = 11;  // 0-100
}

// ============================================================================
// CONSENSUS STREAM MESSAGES
// ============================================================================

message ConsensusStreamRequest {
  string client_id = 1;
  string session_token = 2;

  // Event filtering
  repeated string event_types = 3;  // ["leader_election", "proposal", "vote", "commitment"]

  // Options
  int32 update_interval_ms = 4;  // Default: 500ms
  bool include_voting_details = 5;
  bool include_validator_info = 6;
}

message ConsensusEvent {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Consensus round info
  int64 round = 3;
  int64 term = 4;
  string phase = 5;  // "election", "proposal", "voting", "commitment", "finalization"

  // Leader info
  string proposer_id = 6;
  string leader_id = 7;

  // Voting progress
  int32 votes_for = 8;
  int32 votes_against = 9;
  int32 votes_required = 10;

  // Block info
  string block_hash = 11;
  int64 block_height = 12;

  // Timing
  int64 round_duration_ms = 13;

  // Result
  bool consensus_reached = 14;
  string result = 15;  // "accepted", "rejected", "timeout"
}

message ConsensusRoundEvent {
  int64 round_number = 1;
  google.protobuf.Timestamp started_at = 2;
  google.protobuf.Timestamp ended_at = 3;

  // Round phases
  ConsensusPhase proposal_phase = 4;
  ConsensusPhase voting_phase = 5;
  ConsensusPhase commitment_phase = 6;

  // Round result
  bool successful = 7;
  string result_block_hash = 8;
  int64 total_duration_ms = 9;
}

message ConsensusPhase {
  string phase_name = 1;
  google.protobuf.Timestamp started_at = 2;
  google.protobuf.Timestamp ended_at = 3;
  int64 duration_ms = 4;
  bool successful = 5;
}

// ============================================================================
// NETWORK STREAM MESSAGES
// ============================================================================

message NetworkStreamRequest {
  string client_id = 1;
  string session_token = 2;

  // Event filtering
  repeated string event_types = 3;  // ["node_join", "node_leave", "peer_connect", "peer_disconnect", "topology"]

  // Node filtering
  repeated string node_ids = 4;
  repeated string regions = 5;

  // Options
  int32 update_interval_ms = 6;  // Default: 3000ms
  bool include_topology_graph = 7;
}

message NetworkEvent {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Event details
  string event_type = 3;  // "node_joined", "node_left", "peer_connected", "peer_disconnected", "status_change"

  // Node info
  string node_id = 4;
  io.aurigraph.v11.proto.NodeStatus node_status = 5;

  // Network stats
  int32 total_nodes = 6;
  int32 active_nodes = 7;
  int32 peer_connections = 8;

  // Performance
  double average_latency_ms = 9;
  double network_health_score = 10;  // 0-100

  // Additional data
  map<string, string> metadata = 11;
}

message NetworkTopologyEvent {
  google.protobuf.Timestamp timestamp = 1;

  // Topology snapshot
  repeated NodeTopology nodes = 2;
  repeated PeerConnection connections = 3;

  // Network statistics
  int32 total_nodes = 4;
  int32 total_connections = 5;
  double network_density = 6;  // 0-1 ratio
  double average_latency_ms = 7;
}

message NodeTopology {
  string node_id = 1;
  string node_type = 2;
  io.aurigraph.v11.proto.NodeStatus status = 3;

  // Geographic info
  string region = 4;
  double latitude = 5;
  double longitude = 6;

  // Connectivity
  repeated string peer_ids = 7;
  int32 peer_count = 8;
}

message PeerConnection {
  string connection_id = 1;
  string node_1 = 2;
  string node_2 = 3;
  double latency_ms = 4;
  int64 bandwidth_mbps = 5;
  string status = 6;  // "connected", "connecting", "disconnected"
}

// ============================================================================
// METRICS STREAM MESSAGES
// ============================================================================

message MetricStreamRequest {
  string client_id = 1;
  string session_token = 2;

  // Metric filtering
  repeated string metric_types = 3;  // ["tps", "latency", "cpu", "memory", "consensus", "network"]
  repeated string node_ids = 4;  // Empty = all nodes

  // Options
  int32 update_interval_ms = 5;  // Default: 1000ms (1 second)
  bool include_time_series = 6;
  int32 time_series_window_minutes = 7;  // Default: 5 minutes
}

message MetricEvent {
  string metric_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Metric identification
  string metric_name = 3;  // "tps", "latency", "cpu_usage", "memory_usage", etc.
  string metric_type = 4;  // "gauge", "counter", "histogram"

  // Metric value
  double value = 5;
  string unit = 6;  // "tps", "ms", "percent", "bytes"

  // Context
  string node_id = 7;
  map<string, string> labels = 8;

  // Statistical data (for histograms)
  MetricStatistics statistics = 9;
}

message MetricStatistics {
  double min = 1;
  double max = 2;
  double avg = 3;
  double median = 4;
  double p95 = 5;
  double p99 = 6;
  int64 sample_count = 7;
}

message AggregatedMetricEvent {
  google.protobuf.Timestamp timestamp = 1;

  // Aggregation info
  string aggregation_type = 2;  // "cluster", "region", "node_type"
  string aggregation_scope = 3;  // "global", "us-west", "validator"

  // Metrics
  repeated MetricEvent metrics = 4;

  // Cluster-wide stats
  ClusterMetrics cluster_metrics = 5;
}

message ClusterMetrics {
  // TPS metrics
  int64 total_tps = 1;
  int64 avg_tps_per_node = 2;
  int64 peak_tps_1h = 3;

  // Latency metrics
  double avg_latency_ms = 4;
  double p95_latency_ms = 5;
  double p99_latency_ms = 6;

  // Node metrics
  int32 total_nodes = 7;
  int32 active_nodes = 8;

  // Resource metrics
  double avg_cpu_percent = 9;
  double avg_memory_percent = 10;

  // Health score
  double cluster_health_score = 11;  // 0-100
}

// ============================================================================
// MULTI-STREAM SUBSCRIPTION
// ============================================================================

message MultiStreamRequest {
  string client_id = 1;
  string session_token = 2;

  // Subscribe to multiple stream types
  bool include_transactions = 3;
  bool include_validators = 4;
  bool include_consensus = 5;
  bool include_network = 6;
  bool include_metrics = 7;

  // Individual stream configs
  TransactionStreamRequest transaction_config = 8;
  ValidatorStreamRequest validator_config = 9;
  ConsensusStreamRequest consensus_config = 10;
  NetworkStreamRequest network_config = 11;
  MetricStreamRequest metric_config = 12;

  // Global options
  int32 global_buffer_size = 13;
  bool enable_compression = 14;
}

message UnifiedEvent {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Event source
  string stream_type = 3;  // "transaction", "validator", "consensus", "network", "metric"

  // Event payload (one of)
  oneof event {
    TransactionEvent transaction = 4;
    ValidatorEvent validator = 5;
    ConsensusEvent consensus = 6;
    NetworkEvent network = 7;
    MetricEvent metric = 8;
  }
}

// ============================================================================
// INTERACTIVE STREAM CONTROL
// ============================================================================

message StreamCommand {
  enum CommandType {
    UNKNOWN = 0;
    SUBSCRIBE = 1;
    UNSUBSCRIBE = 2;
    PAUSE = 3;
    RESUME = 4;
    CHANGE_INTERVAL = 5;
    ADD_FILTER = 6;
    REMOVE_FILTER = 7;
    REQUEST_SNAPSHOT = 8;
  }

  CommandType command = 1;
  string stream_type = 2;  // "transaction", "validator", "consensus", "network", "metric"
  map<string, string> parameters = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// ============================================================================
// STREAM MANAGEMENT
// ============================================================================

message StreamSubscriptionResponse {
  bool success = 1;
  string subscription_id = 2;
  string message = 3;
  google.protobuf.Timestamp started_at = 4;

  // Server capabilities
  repeated string supported_streams = 5;
  int32 max_concurrent_streams = 6;
  int32 min_update_interval_ms = 7;
}

message StreamHealthCheck {
  string subscription_id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // Health status
  bool healthy = 3;
  int64 events_delivered = 4;
  int64 events_dropped = 5;
  double delivery_rate_per_sec = 6;

  // Performance
  double avg_latency_ms = 7;
  int32 buffer_utilization_percent = 8;
}

// ============================================================================
// ERROR HANDLING
// ============================================================================

message StreamError {
  string error_code = 1;  // "RATE_LIMIT_EXCEEDED", "AUTHENTICATION_FAILED", "STREAM_CLOSED"
  string error_message = 2;
  google.protobuf.Timestamp timestamp = 3;

  // Recovery info
  bool retryable = 4;
  int32 retry_after_ms = 5;
  string recovery_action = 6;
}
